--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<a-marker type="pattern" url="data/markers\pattern-Flower.patt" markercontroller="name : pattern-Flower"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-highcontrast.patt" markercontroller="name : pattern-highcontrast"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-JImmy Wonderland graphic (1).patt" markercontroller="name : pattern-JImmy Wonderland graphic (1)"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-Top gun watch (1).patt" markercontroller="name : pattern-Top gun watch (1)"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-Top gun watch.patt" markercontroller="name : pattern-Top gun watch"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
