--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <!-- <a-marker type="pattern" url="data/markers/pattern-arjs.patt"><a-box></a-box></a-marker> -->
       <!-- <a-marker type="pattern" url="data/markers/test.patt" markercontroller="name : hiro"></a-marker> -->
 
-			<a-marker type="pattern" url="data/markers\iwcimage.patt" markercontroller="name : iwcimage"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-Astronau.patt" markercontroller="name : pattern-Astronau"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern-Flower.patt" markercontroller="name : pattern-Flower"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern1.patt" markercontroller="name : pattern1"></a-marker>
-			<a-marker type="pattern" url="data/markers\watch.patt" markercontroller="name : watch"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
