--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       <!-- <a-marker type="pattern" url="data/markers/pattern-arjs.patt"><a-box></a-box></a-marker> -->
       <!-- <a-marker type="pattern" url="data/markers/test.patt" markercontroller="name : hiro"></a-marker> -->
 
+			<a-marker type="pattern" url="data/markers\1.patt" markercontroller="name : 1"></a-marker>
+			<a-marker type="pattern" url="data/markers\2.patt" markercontroller="name : 2"></a-marker>
+			<a-marker type="pattern" url="data/markers\3.patt" markercontroller="name : 3"></a-marker>
+			<a-marker type="pattern" url="data/markers\4.patt" markercontroller="name : 4"></a-marker>
+			<a-marker type="pattern" url="data/markers\5.patt" markercontroller="name : 5"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-Astronau.patt" markercontroller="name : pattern-Astronau"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-Flower.patt" markercontroller="name : pattern-Flower"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern1.patt" markercontroller="name : pattern1"></a-marker>
