--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<a-marker type="pattern" url="data/markers\pattern-Astronau.patt" markercontroller="name : pattern-Astronau"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern-Flower.patt" markercontroller="name : pattern-Flower"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern1.patt" markercontroller="name : pattern1"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern2.patt" markercontroller="name : pattern2"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
