--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 			<a-marker type="pattern" url="data/markers\pattern-Flower.patt" markercontroller="name : pattern-Flower"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern1.patt" markercontroller="name : pattern1"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern2.patt" markercontroller="name : pattern2"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern3.patt" markercontroller="name : pattern3"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern4.patt" markercontroller="name : pattern4"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern5.patt" markercontroller="name : pattern5"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern6.patt" markercontroller="name : pattern6"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
