--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 			<a-marker type="pattern" url="data/markers\pattern4.patt" markercontroller="name : pattern4"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern5.patt" markercontroller="name : pattern5"></a-marker>
 			<a-marker type="pattern" url="data/markers\pattern6.patt" markercontroller="name : pattern6"></a-marker>
+			<a-marker type="pattern" url="data/markers\pattern7.patt" markercontroller="name : pattern7"></a-marker>
+			<a-marker type="pattern" url="data/markers\post.patt" markercontroller="name : post"></a-marker>
+			<a-marker type="pattern" url="data/markers\pre.patt" markercontroller="name : pre"></a-marker>
+			<a-marker type="pattern" url="data/markers\whatsapp.patt" markercontroller="name : whatsapp"></a-marker>
 
       <a-entity camera cameratransform></a-entity>
     </a-scene>
